--- a/drivers/pci/endpoint/functions/Kconfig
+++ b/drivers/pci/endpoint/functions/Kconfig
@@ -45,7 +45,7 @@ config PCI_EPF_VNET
 	select VHOST_RING
 	select VHOST_IOMEM
 	help
-	  Endpoint virtio-net function implementation. This module enables to
-	  show the virtio-net as pci device to PCIe Host side. In addition,
-	  another virtio-net device show on local machine. Those devices can
-	  communicate each other.
+	  PCIe Endpoint virtio-net function implementation. This module enables to
+	  show the virtio-net as pci device to PCIe Host side, and, another
+	  virtio-net device show to local machine. Those devices can communicate
+	  each other.
